Logical error with speaker update #39083

Closed
opened 2014-03-10 09:04:59 +01:00 by Campbell Barton · 7 comments

Speakers evaluated multiple times per frame update with set scenes.

Problem explained.

  • scene_update_tagged_recursive runs recursively on set scenes.
  • sound_update_scene runs from scene_update_tagged_recursive
  • sound_update_scene calls for (SETLOOPER(scene, sce_it, base)) {

From what I can tell sound_update_scene only needs to run on the parent scene, not recursively because sound.c is only playing sound from the parent scene.

Speakers evaluated multiple times per frame update with set scenes. Problem explained. - `scene_update_tagged_recursive` runs recursively on set scenes. - `sound_update_scene` runs from `scene_update_tagged_recursive` - `sound_update_scene` calls `for (SETLOOPER(scene, sce_it, base)) {` From what I can tell `sound_update_scene` only needs to run on the parent scene, not recursively because sound.c is only playing sound from the parent scene.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Joerg Mueller was assigned by Campbell Barton 2014-03-10 09:04:59 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by blender/blender-addons-contrib@23fbc9f22f

This issue was referenced by blender/blender-addons-contrib@23fbc9f22f3dfd7151c4396a17fbe586b0594d81

This issue was referenced by 23fbc9f22f

This issue was referenced by 23fbc9f22f3dfd7151c4396a17fbe586b0594d81
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Closed by commit 23fbc9f22f.

Closed by commit 23fbc9f22f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39083
No description provided.