Fix T39083: speakers were evaluated multiple times when used in sets

also skip checking all objects for speakers when no speakers are in the
blend file.