source/blender/blenkernel/BKE_sound.h
@@ -134,7 +134,7 @@ void sound_free_waveform(struct bSound *sound);
 
 void sound_read_waveform(struct bSound *sound);
 
-void sound_update_scene(struct Scene *scene);
+void sound_update_scene(struct Main *bmain, struct Scene *scene);
 
 void *sound_get_factory(void *sound);
 
